# sfxatools

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  README.md  THANKS  aclocal.m4  bootstrap.sh  config.h.in  configure  configure.ac  import-gnulib.sh  sfxatools.spec.in
bio/: Makefile.am  Makefile.in  NCBI2na.map  NCBIstdaa.map  annotidx.c  bl2dump.c  fa2hdsq.c  na_pat.c  na_pat.h  nsps.c  ofiles.c  ofiles.h  parsefa.c  parsefa.h  prosite.c  prosite.h  psps.c
doc/: Makefile.am  Makefile.in  annotidx.1  bl2dump.1  fa2hdsq.1  mklcpa.1  mksfxa.1  nsps.1  psps.1  sfxa.1  sfxasrch.1  sfxatools.texi  version.texi
lib/: Makefile.am  Makefile.in  lcp.c  lcp.h  output.c  output.h  parser.h  parser.y  regexp.c  regexp.h  region.c  region.h  search.c  search.h  search_impl.h  sfxa.c  sfxa.h  sort.c  sort.h
libgnu/: Makefile.am  Makefile.in
libgnu/m4/: gnulib-cache.m4  gnulib-comp.m4  gnulib.m4
src/: Makefile.am  Makefile.in  lcp.c  lcp.h  mklcpa.c  mksfxa.c  output.c  output.h  range.h  search.c  search.h  sfxa.c  sfxasrch.c  sort.c  sort.h
tests/: .cvsignore  Makefile.am  Makefile.in  annotidx.at  annotidx.in  bl2dump.at  bl2dump.in  fa2hdsq.at  fa2hdsq.in  mklcpa.at  mklcpa.in  mksfxa.at  mksfxa.in  nsps.at  nsps.in  package.m4  psps.at  psps.in  sfxa.at  sfxa.in  sfxasrch.at  sfxasrch.in  testsuite  testsuite.at
util/: Makefile.am  Makefile.in  bldpath.c  bldpath.h  cmap.c  cmap.h  mbuf.c  mbuf.h  mmfile.c  mmfile.h  msg.c  msg.h  ptrstk.h  sfxa.c  sfxa.h  strdupcat.c  strdupcat.h  u32stk.h
